# music-sync

./: .editorconfig  .gitignore  LICENSE  MusicSync.sln  README.md  config.json  config.yaml  music_sync.py  music_sync.sqlite  pyproject.toml
.github/workflows/: build.yml
MusicSync/: MusicSync.csproj  Program.cs
MusicSync.Tests/: ConfigLoaderTests.cs  DatabaseLoggingTests.cs  DatabaseServiceTests.cs  DrmPluginLoaderTests.cs  FfmpegUtilTests.cs  MusicFileProcessorTests.cs  MusicSync.Tests.csproj  MusicSyncServiceMissingDirTests.cs  MusicSyncServiceTests.cs  TemporaryUtilsTests.cs  TestUtils.cs
MusicSync/Models/: Config.cs  DrmPlugin.cs
MusicSync/Plugins/: DrmPlugin.cs
MusicSync/Services/: ConfigLoader.cs  DatabaseService.cs  DrmPluginLoader.cs  MusicFileProcessor.cs  MusicSyncService.cs
MusicSync/Utils/: ConfigJsonContext.cs  ConfigYamlContext.cs  FfmpegUtil.cs  HashUtil.cs  TemporaryDirectory.cs  TemporaryFile.cs
drm_plugins/: ncmdump.sh
music_sync/: __init__.py  cli.py  core.py  db_model.py  hashutils.py  plugins.py  processor.py
scripts/: build.sh  clean.sh  run.sh  test.sh
tests/: test_core_functions.py  test_errors.py  test_get_music_md5.py  test_integration_cli.py  test_plugin_loading.py  test_skip_logic.py
